# cso

./: .gitignore  README.md  prepare_embeddings.py  run_embeddings.slurm  run_geco2_masks.slurm
3d-counting/: .gitignore  HPC_INSTRUCTIONS.md  LICENSE.md  README.md  pyproject.toml
3d-counting/counting_3d/: gamma_model.py  inference_density.py
3d-counting/counting_3d/utils/: append_to_json.py
3d-counting/counting_splatfacto/: counting_config.py  counting_pipeline.py  counting_splatfacto.py
3d-counting/data/: unit_volumes.json
3d-counting/data/pasta/: info.json  sparse_pc.ply  transforms.json
GECO2/: HPC_INSTRUCTIONS.md  LICENSE  README.md  app.py  create_geco2_masks.py  demo_gradio.py  gradio_image_prompter-0.1.0-py3-none-any.whl  req.txt  stacks_inference.ipynb
GECO2/configs/: sam2_hiera_base_plus.yaml
GECO2/models/: __init__.py  counter.py  matcher.py  mlp.py  prompt_encoder.py  regression_head.py  transformer.py
cfg/: baseline.yaml  configs.py  experiments.py  utils.py
models/: counter_infer.py
notebooks/: counting_objects.ipynb  demo_pasta_dataset.ipynb  geco2_inference.ipynb
sam-3d-objects/: .gitignore  HPC_INSTRUCTIONS.md  download_data.txt  sam3d.def
scripts/: collect_results.py  generate_geco2_masks.py  generate_image_embeddings.py  generate_instance_features.py  generate_shape_embeddings.py  prepare_sam_data.py  run_experiments.py  run_training.py
slurm/: generate_embeddings.slurm  generate_geco2_masks.slurm  generate_image_embeddings.slurm  generate_instance_features.slurm  generate_shape_embeddings.slurm  run_training.slurm
(+49 files in other folders)
