[project]
name = "counting-splatfacto"
description = "Extended Splatfacto from 'Counting Stacked Objects', ICCV25."
version = "1.0.0"

dependencies = ["nerfstudio >= 1.0.2"] 

[tool.setuptools.packages.find]
include = ["counting_splatfacto*"]

[project.entry-points.'nerfstudio.method_configs']
counting-splatfacto = 'counting_splatfacto.counting_config:counting_splatfacto'